...
    <string name="picker_barcode_variants">%1$d barkod varijante</string>
    <string name="picker_less">Manje</string>
    <string name="picker_more_about">Više o proizvodu</string>
    <string name="picker_choose">Izaberi</string>
    <string name="picker_selected">Izabran proizvod</string>
    <string name="picker_change_selection">Promeni izbor</string>
    <string name="picker_recorded_at">Zabeležen kod: %1$s</string>
    <string name="picker_no_current_price">Nemamo aktuelnu cenu</string>
    <string name="picker_check_price">proveri cenu</string>
    <string name="picker_price_from">od %1$s</string>
    <plurals name="picker_more_chains">
        <item quantity="one">i u još %d lancu</item>
        <item quantity="few">i u još %d lanca</item>
        <item quantity="other">i u još %d lanaca</item>
...
